--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,11 @@
 body {
-  background: yellow;
+  -webkit-font-smoothing: antialiased;
+  background: #f1e2d0;
+  height: 100vh;
 }
 
 h1 {
   font-family: "InputMonoMedium";
+  color: #1b1b26;
+  border: solid 7px #f7df3e;
 }
