--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,9 @@
 
 body {
   -webkit-font-smoothing: antialiased;
+  font-family: "InputMonoMedium";
+  color: #1b1b26;
+  font-size: 32px;
   background: #f1e2d0;
   padding: 0 20px;
   height: 100vh;
@@ -19,8 +22,7 @@ section {
 }
 
 section {
-  height: 60vh;
-  justify-content: center;
+  align-items: center;
 }
 
 footer {
@@ -28,23 +30,33 @@ footer {
   justify-content: flex-end;
 }
 
-h1,
-input {
-  margin: auto;
+h1 {
+  margin: 30px 0;
 }
 
-h1,
-h2,
-label,
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+label {
+  font-size: 16px;
+  margin: 10px 0;
+  text-transform: uppercase;
+}
+
 button,
 input {
   font-family: "InputMonoMedium";
   color: #1b1b26;
+  border: none;
+  outline: none;
+  width: 100%;
 }
 
-label,
 button {
-  font-size: 22px;
+  font-size: 16px;
   text-transform: uppercase;
 }
 
@@ -57,29 +69,9 @@ h2 {
   font-size: 22px;
 }
 
-input,
 button {
-  border: none;
-  outline: none;
-  width: 100%;
-}
-
-button {
-  margin: 5% 0;
-  /* width: calc(40vw - 10px); */
+  margin: 10px 0;
   padding: 10px;
   background-color: #f7df3e;
   cursor: pointer;
-}
-
-button,
-label {
-  margin: 10px 0;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
 }
