--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,6 +57,12 @@ input {
   width: 100%;
 }
 
+input::placeholder {
+  color: #1b1b26;
+  font-family: "InputMonoEL";
+  font-size: 22px;
+}
+
 button {
   font-size: 16px;
   text-transform: uppercase;
